# quickshell-polkit-agent

./: .containerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Containerfile  LOGGING.md  PACKAGING.md  README.md  run-tests.sh
.github/workflows/: security-testing.yml
examples/: PolkitAgent.qml  example-shell.qml  test-new-qml.sh
packaging/systemd/: quickshell-polkit-agent-debug.service  quickshell-polkit-agent.service
packaging/systemd/quickshell-polkit-agent.service.d/: logging.conf.example
quickshell/: PolkitAgent.qml
src/: file-ipc.cpp  file-ipc.h  ipc-server.cpp  ipc-server.h  logging.cpp  logging.h  main.cpp  message-validator.cpp  message-validator.h  nfc-detector.cpp  nfc-detector.h  polkit-wrapper.cpp  polkit-wrapper.h  security.cpp  security.h
tests/: CMakeLists.txt  README.md  mock-polkit-session.h  polkit-test-helper.h  test-authentication-state-integration.cpp  test-e2e-current.cpp  test-localsocket-validation.cpp  test-message-validator.cpp  test-performance-stress.cpp  test-security.cpp  test-simple-integration.cpp
tests/e2e/: Containerfile.e2e  README.md  org.quickshell.polkit.test.policy  polkit-test-rules.conf  run-e2e-tests.sh  run-podman-e2e.sh  trigger-polkit-action.cpp
tests/pam/: CMakeLists.txt  README.md  pam_fido_mock.c  polkit-1  polkit-1-fail  polkit-1-fido  polkit-test-fail  polkit-test-fido  polkit-test-password  polkit-test-success
tests/security/: README.md  fuzz_ipc_socket.py  run_security_tests.py  test_audit_logging.py  test_permissions.py  test_rate_limiting.py  test_replay_attacks.py  test_ui_confusion.py
tests/security/reports/: audit_log_report.json  fuzz_ipc_socket_report.json  permission_security_report.json  rate_limiting_report.json  replay_attack_report.json  security_test_summary.json  ui_confusion_report.json
